fix spacing between navbar button text and caret

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -20,6 +20,7 @@
 
 .navbarDropdownToggle {
     min-width: 160px;
+    padding-right: 40px;
 }
 
 .navbarDropdownToggle::after {
